--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Je microfoon wordt automatisch gedempt wanneer je deelneemt aan een groot groepsgesprek. Dus nu zal niemand je horen zeggen: "Wow wat veel mensen hier", tenzij je het dempen zelf hebt opgeheven natuurlijk.
