--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Dein Mikrofon wird automatisch stummgeschaltet, sobald du an einem großen Gruppenanruf teilnimmst. So kann keiner mehr hören, wenn du dich über „so viele Leute im Call“ äußerst. Es sei denn, du hebst die Stummschaltung zuvor auf.
