--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Το μικρόφωνό σου θα μεταβαίνει πλέον αυτόματα σε σίγαση κάθε φορά που συμμετέχεις σε μια κλήση μεγάλης ομάδας.
