--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Ahora, tu micrófono se silenciará automáticamente cada vez que te unas a una llamada grupal grande, por lo que ya nadie te oirá decir "madre mía, cuánta gente hay aquí" a menos que lo vuelvas a activar.
