--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Pour éviter les indiscrétions et autres bourdes, Signal désactive automatiquement votre micro lorsque vous rejoignez un appel de groupe. Plus personne ne vous entendra vous exclamer : « Oh là là ! Mais y a du monde, ici ! » – à moins que vous n’activiez votre micro plus vite que votre ombre.
