--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• מעכשיו, המיקרופון שלך יהפוך למושתק אוטומטית בכל פעם שתצטרפ/י לשיחה קבוצתית גדולה.
