--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Vaš će mikrofon automatski biti isključen kad se pridružite grupnom pozivu s velikim brojem sudionika.
