--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Da ora il tuo microfono verrà disattivato in automatico quando ti unisci a una chiamata di gruppo con molti partecipanti: è scientificamente provato che sia il modo più sicuro per evitare potenziali figuracce (fidati di chi come noi ci è già passato).
