--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• 이제 대규모 그룹 통화에 참가할 때마다 마이크가 자동으로 음소거로 전환됩니다.
