--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Od teraz Twój mikrofon automatycznie wyciszy się za każdym razem, gdy dołączysz do dużego połączenia grupowego. Także bez obaw, już nikt nie usłyszy Twojego: „o kurka, ile ludzi”. Chyba że wyłączysz wyciszenie.
