--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Seu microfone será silenciado automaticamente ao entrar em uma chamada de grupo grande. Assim, ninguém vai ouvir você dizer "nossa, quanta gente aqui" a menos que você ative o som primeiro.
