--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Microfonul tău va trece automat în modul silențios ori de câte ori te alături unui apel de grup mare, astfel încât acum nimeni nu te va auzi spunând "omg sunt atât de mulți oameni aici" decât dacă activezi sunetul mai întâi.
