--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Ваш микрофон будет автоматически переключаться в немой режим, когда вы присоединяетесь к многолюдному групповому звонку, так что теперь никто не услышит, как вы произносите: «Ой, сколько здесь народу!», пока вы сами не включите звук.
