--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
+• Тепер мікрофон автоматично вимикається, якщо приєднатися до групового виклику з великою кількістю учасників. Тож ніхто не почує ваше «Зроби й мені чаю!», якщо ви самі не ввімкнете мікрофон.
